# MIPT

./: .gitignore  Calc Center Presentation.tex  English Glossary.docx  README.md  git.gitignore
Algorithm/Contest-01/: 1-D.cpp  1-I.cpp
Algorithm/Contest-03/: 3-B.cpp  3-D.cpp  3-E.cpp
Algorithm/Contest-06/: 6-A.cpp  6-D.cpp  6-M.cpp  6-P.cpp  6-R.cpp  6-T.cpp
Algorithm/Contest-07/: 7-B.cpp  7-C.cpp  7-D.cpp  7-H.cpp
Algorithm/Contest-08/: 8-E.cpp
Algorithm/Contest-09/: 9-I.cpp  9-Q.cpp  9-R.cpp
Algorithm/Contest-11/: 11-A.cpp  11-I.cpp
Algorithm/Contest-12/: 12-B.cpp
Algorithm/Contest-13/: 13-B.cpp  13-C.cpp  13-H.cpp  13-K.cpp
Algorithms/: README.md
Algorithms/Contest-01/: 1-A.cpp  1-B.cpp  1-C.cpp  1-G.cpp
Algorithms/Contest-02/: 2-A.cpp  2-C.cpp  2-D.cpp  2-E.cpp  2-F.cpp  2-G.cpp  2-I.cpp  2-J.cpp
Algorithms/Contest-03/: 3-F.cpp  3-G.cpp  3-H.cpp  3-I.cpp
Algorithms/Contest-04/: 4-A.cpp  4-C.cpp  4-D.cpp
Algorithms/Contest-05/: 5-A.cpp  5-F.cpp
Algorithms/Contest-06/: 6-B.cpp  6-C.cpp  6-E.cpp  6-F.cpp  6-G-1.cpp  6-G-2.cpp  6-H.cpp  6-J.cpp  6-L.cpp  6-O.cpp  6-Q.cpp
Algorithms/Contest-07/: 7-A.cpp  7-E.cpp  7-J.cpp
Algorithms/Contest-08/: 8-A.cpp  8-B.cpp  8-C.cpp  8-D.cpp  8-F.cpp  8-G.cpp  8-H.cpp  8-J.cpp
Algorithms/Contest-09/: 9-A.cpp  9-B.cpp  9-C.cpp  9-D.cpp  9-E.cpp  9-G.cpp  9-H.cpp  9-K.cpp  9-L.cpp  9-M.cpp  9-N.cpp
Algorithms/Contest-10/: 10-C.cpp  10-E.cpp  10-F.cpp  10-G.cpp  10-I.cpp
Algorithms/Contest-11/: 11-B.cpp  11-J.cpp
Algorithms/Contest-12/: 12-A.cpp  12-F.cpp
Algorithms/Contest-13/: 13-A.cpp  13-F.cpp  13-G.cpp  13-I.cpp  13-J.cpp
Computational Math/: Task.ipynb
Data Analysis/: task10.ipynb  task4.ipynb  task6.ipynb  task9.ipynb
DataAnalysis/: task4.ipynb  task6.ipynb  task9.ipynb
Discrete Mathematics/Computation Complexity/Article/Implementation/: CMakeLists.txt
Discrete Mathematics/Computation Complexity/Article/Implementation/include/: TSP.hpp
Discrete Mathematics/Computation Complexity/Article/Implementation/include/BlossomV/: LCA.h  PQ.h  block.h
Discrete Mathematics/Computation Complexity/Article/Implementation/include/BlossomV/MinCost/: MinCost.h
Discrete Mathematics/Computation Complexity/Article/Implementation/src/: CMakeLists.txt
Discrete Mathematics/Computation Complexity/Article/Implementation/src/BlossomV/: CMakeLists.txt  PMexpand.cpp  PMinterface.cpp  PMmain.cpp  PMrepair.cpp
Discrete Mathematics/Computation Complexity/Article/Implementation/src/BlossomV/MinCost/: MinCost.cpp
Economics/: Task.docx
English/: MYYYYYYY.tex  Rhyming.pptx  Values.pptx  Words.xlsx  dd.md  dfd.tex  ff.tex
Formal Languages/: README.md  proof.txt  test.cpp
FormalLanguages/: AutomationTask.hpp  AutomatonTask.cpp  CMakeLists.txt
MathStats/: HW_0.ipynb  HW_1.ipynb  HW_2.ipynb  trt.ipynb
OS/: .gitignore
OptimizationMethods/: HW_1.tex  HW_10.ipynb  HW_11.ipynb  HW_2-1.ipynb  HW_3.ipynb  HW_4.ipynb  HW_6-2.ipynb
Physical Education/: project.tex
Technologies of Programming/task-cmake/: CMakeLists.txt
Technologies of Programming/task-cmake/B/: lib.cpp  lib.h
Technologies of Programming/task-cmake/C/: CMakeLists.txt
(+477 files in other folders)
